Criando o menu vertical

--- a/index.html
+++ b/index.html
@@ -19,10 +19,22 @@
             
             <div id="area-menu">
                 <div id="conteudo-menu">
+                   
                     <div id="menu-locais">
                         <span class="locais">Pernambuco - Paraiba - Rio Grande do Norte</span>
                         <a class="reserva" href="">Reservar</a>
                         <div style="clear: both;"></div>
+                    </div>
+
+                    <div id="menu">
+                        <ul id="navegacao">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">História</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                        <img class="depoimento" src="imagens/depoimento.png" alt="">
                     </div>
                 </div>
             </div>
