criando areas de conteudos

--- a/index.html
+++ b/index.html
@@ -39,6 +39,37 @@
                 </div>
             </div>
         </div>
+
+        <div id="area-principal">
+            <div class="conteudo">
+                <h2>
+                    Lorem ipsum, dolor sit amet. 
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, quia voluptas magni culpa tempore doloribus quisquam totam dolores accusamus velit sed ab ipsum. Harum doloribus dolorem maiores dolores quo corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, debitis aut illum fuga nam magnam enim ea id ducimus blanditiis distinctio illo, ipsam, esse laudantium et? Repellat unde cum nihil. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam deserunt, quis totam, dolor ducimus voluptatum cupiditate maxime quo quibusdam rerum molestiae consequatur eveniet ipsum debitis. Iusto quisquam eveniet rerum itaque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id sunt a corporis sed. Sequi doloremque blanditiis, unde harum corrupti explicabo totam, commodi ipsa ad sapiente et adipisci, aut illo repellendus!
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste at optio incidunt excepturi? Beatae obcaecati facere inventore ea quod sapiente porro nihil similique sint, exercitationem accusantium nobis rerum iste. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, totam reprehenderit enim quibusdam sit fuga itaque ipsa veniam ipsum tempora quas amet. Nemo sit laborum consequuntur dolores facere aut ducimus.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi et nihil aliquid assumenda ab omnis, exercitationem ipsum reiciendis, ipsam, laborum eos molestiae iure quia distinctio eveniet officiis quo vero soluta!
+                </p>
+            </div>
+        </div>
+
+        <div id="area-lateral">
+            <div class="conteudo">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam non dignissimos! Recusandae maxime odit tempore quam pariatur ullam velit, enim eos vel adipisci fuga dignissimos! Quae totam ad inventore?
+                </p>
+            </div>
+        </div>
+
+        <div id="rodape">
+            rodape
+        </div>
+
+
     </div>
     
 </body>
